Closed
Bug 236590
Opened 22 years ago
Closed 22 years ago
Mozilla crashes when moving the mouse over some menu items on the page. - M17beta [@ nsCSSFrameConstructor::StyleChangeReflow] [@ IsCanvasFrame] [@ 0x00000000 - IsCanvasFrame]
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: tom.williams, Assigned: bryner)
References
()
Details
(4 keywords)
Crash Data
Attachments
(3 files)
|
5.22 KB,
text/plain
|
Details | |
|
377 bytes,
text/html
|
Details | |
|
707 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
chofmann
:
approval1.7+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:) Gecko/20040305 MultiZilla/1.6.2.1d
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:) Gecko/20040305 MultiZilla/1.6.2.1d
When I move the mouse over some menu items on the http://markschenk.com/ page,
Mozilla crashes.
Reproducible: Always
Steps to Reproduce:
1.Go to http://markschenk.com/
2.Move the mouse over the menu optons
3.
Actual Results:
Mozilla crashes.
Expected Results:
Mozilla should not crash.
Comment 1•22 years ago
|
||
WFM Mozilla 1.7a & Firefox 0.8, WinXP
Comment 3•22 years ago
|
||
Comment 4•22 years ago
|
||
Confirming bug, 2004-03-02-08 trunk Linux.
Assignee: general → dbaron
Status: UNCONFIRMED → NEW
Component: Browser-General → Style System (CSS)
Ever confirmed: true
Keywords: stackwanted
OS: Windows 2000 → All
QA Contact: general → ian
Summary: Mozilla crashes when moving the mouse over some menu items on the page. → Mozilla crashes when moving the mouse over some menu items on the page. [@ nsCSSFrameConstructor::StyleChangeReflow]
Comment 5•22 years ago
|
||
I should have added:
(gdb) frame 8
#8 0x41eae37c in nsCSSFrameConstructor::StyleChangeReflow(nsIPresContext*,
nsIFrame*, nsIAtom*) (this=0x8760d70,
aPresContext=0x87790e0, aFrame=0x87b72f4, aAttribute=0x0) at
nsCSSFrameConstructor.cpp:9665
9665 rv = CallQueryInterface(aFrame, &box);
(gdb) p *aFrame
$4 = {<nsISupports> = {_vptr.nsISupports = 0x0}, mRect = {x = -572662307, y =
-572662307, width = -572662307, height = -572662307},
mContent = 0xdddddddd, mStyleContext = 0xdddddddd, mParent = 0xdddddddd,
mNextSibling = 0xdddddddd, mState = 3722304989}
Comment 7•22 years ago
|
||
testcase crashes linux trunk 2003030407
*** Bug 237968 has been marked as a duplicate of this bug. ***
Comment 9•22 years ago
|
||
Mats, thanks for narrowing down the regression range!
This was broken by bryner's patch for bug 233972. GetFrameProperty() used to
return NS_IFRAME_MGR_PROP_NOT_THERE if the property was not set, but after that
patch it started returning NS_ERROR_FAILURE. As a result, the code added by rbs
in revision 1.813 of nsCSSFrameConstructor (protection against this exact crash
in ProcessRestyledFrames) became a no-op, since it was checking for
NS_IFRAME_MGR_PROP_NOT_THERE.
Note that nsFrameManager.h documentation now contradicts the code... so the
frame manager code is what we should be fixing, I would say.
We really don't want to ship 1.7 with this bug.
Assignee: dbaron → bryner
Flags: blocking1.7?
Flags: blocking1.7? → blocking1.7+
Comment 10•22 years ago
|
||
*** Bug 237983 has been marked as a duplicate of this bug. ***
Comment 11•22 years ago
|
||
*** Bug 237499 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 12•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #144422 -
Flags: superreview?(dbaron)
Attachment #144422 -
Flags: review?(dbaron)
Attachment #144422 -
Flags: superreview?(dbaron)
Attachment #144422 -
Flags: superreview+
Attachment #144422 -
Flags: review?(dbaron)
Attachment #144422 -
Flags: review+
| Assignee | ||
Comment 13•22 years ago
|
||
Comment on attachment 144422 [details] [diff] [review]
patch
requesting approval for 1.7
Attachment #144422 -
Flags: approval1.7?
Comment 14•22 years ago
|
||
Comment on attachment 144422 [details] [diff] [review]
patch
a=chofmann for 1.7
Attachment #144422 -
Flags: approval1.7? → approval1.7+
| Assignee | ||
Comment 15•22 years ago
|
||
fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 16•22 years ago
|
||
*** Bug 238454 has been marked as a duplicate of this bug. ***
Comment 17•22 years ago
|
||
Added [@ IsCanvasFrame] [@ 0x00000000 - IsCanvasFrame] to track those stack
signatures.
Summary: Mozilla crashes when moving the mouse over some menu items on the page. [@ nsCSSFrameConstructor::StyleChangeReflow] → Mozilla crashes when moving the mouse over some menu items on the page. [@ nsCSSFrameConstructor::StyleChangeReflow] [@ IsCanvasFrame] [@ 0x00000000 - IsCanvasFrame]
Comment 18•22 years ago
|
||
No longer crashing on mouseover at
http://www.stunicholls.myby.co.uk/layouts/3cols.html or http://markschenk.com/ .
Marking verified.
Status: RESOLVED → VERIFIED
Comment 19•22 years ago
|
||
No longer crashing on mouseover with MozillaTrunk 2004040413 build at
http://www.stunicholls.myby.co.uk/layouts/3cols.html or http://markschenk.com/ .
Marking verified.
Updated•22 years ago
|
Summary: Mozilla crashes when moving the mouse over some menu items on the page. [@ nsCSSFrameConstructor::StyleChangeReflow] [@ IsCanvasFrame] [@ 0x00000000 - IsCanvasFrame] → Mozilla crashes when moving the mouse over some menu items on the page. - M17beta [@ nsCSSFrameConstructor::StyleChangeReflow] [@ IsCanvasFrame] [@ 0x00000000 - IsCanvasFrame]
Updated•15 years ago
|
Crash Signature: [@ nsCSSFrameConstructor::StyleChangeReflow]
[@ IsCanvasFrame]
[@ 0x00000000 - IsCanvasFrame]
You need to log in
before you can comment on or make changes to this bug.
Description
•