Make GetFrameProperty return NS_IFRAME_MGR_PROP_NOT_THERE when the property is not found (instead of NS_ERROR_FAILURE).  Fixes bug 236590.  r+sr=dbaron, a=chofmann